{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 97,
  "lineage": "f985e35b-3950-a1a3-dedd-f70fab092ca4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-ControlNode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:491486551761:instance/i-077b1acdb19ae9a65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077b1acdb19ae9a65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mylab-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbd8c009bd5190c6",
            "private_dns": "ip-172-20-10-5.us-east-2.compute.internal",
            "private_ip": "172.20.10.5",
            "public_ip": "18.117.253.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b82471653a61ed8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec47dcf609985eb",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tags_all": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e927175d3714e07d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-Sec-Group",
            "aws_subnet.MyLab-subnet1",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible-ManagedNode",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:491486551761:instance/i-069596204f90acc32",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-069596204f90acc32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mylab-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f5b84ec4a64443f",
            "private_dns": "ip-172-20-10-158.us-east-2.compute.internal",
            "private_ip": "172.20.10.158",
            "public_ip": "3.139.92.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06635e4b273a99b6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec47dcf609985eb",
            "tags": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tags_all": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e927175d3714e07d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-Sec-Group",
            "aws_subnet.MyLab-subnet1",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Docker-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:491486551761:instance/i-0cc1459ee38a19358",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc1459ee38a19358",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mylab-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c69753a87d90cded",
            "private_dns": "ip-172-20-10-87.us-east-2.compute.internal",
            "private_ip": "172.20.10.87",
            "public_ip": "3.131.153.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1a1da90699fa940",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec47dcf609985eb",
            "tags": {
              "Name": "Docker-host"
            },
            "tags_all": {
              "Name": "Docker-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e927175d3714e07d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-Sec-Group",
            "aws_subnet.MyLab-subnet1",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:491486551761:instance/i-0970fc2b436bc9138",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0970fc2b436bc9138",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mylab-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0578251cc77c2cace",
            "private_dns": "ip-172-20-10-169.us-east-2.compute.internal",
            "private_ip": "172.20.10.169",
            "public_ip": "3.142.50.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-007f10d781e48bcb9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec47dcf609985eb",
            "tags": {
              "Name": "Jenkins-server"
            },
            "tags_all": {
              "Name": "Jenkins-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e927175d3714e07d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-Sec-Group",
            "aws_subnet.MyLab-subnet1",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00dfe2c7ce89a450b",
            "arn": "arn:aws:ec2:us-east-2:491486551761:instance/i-00b86793475f201ab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b86793475f201ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mylab-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-007e121442c00559f",
            "private_dns": "ip-172-20-10-54.us-east-2.compute.internal",
            "private_ip": "172.20.10.54",
            "public_ip": "3.141.34.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0759a69408a2c8f79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ec47dcf609985eb",
            "tags": {
              "Name": "Nexus-host"
            },
            "tags_all": {
              "Name": "Nexus-host"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e927175d3714e07d"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab-Sec-Group",
            "aws_subnet.MyLab-subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyLab-InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491486551761:internet-gateway/igw-057cb9ec44b477b9c",
            "id": "igw-057cb9ec44b477b9c",
            "owner_id": "491486551761",
            "tags": {
              "Name": "MyLab-InternetGateway"
            },
            "tags_all": {
              "Name": "MyLab-InternetGateway"
            },
            "vpc_id": "vpc-024d408a5c6043622"
          },
          "dependencies": [
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab-RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491486551761:route-table/rtb-0c5565035243e048a",
            "id": "rtb-0c5565035243e048a",
            "owner_id": "491486551761",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057cb9ec44b477b9c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyLab-RouteTable"
            },
            "tags_all": {
              "Name": "MyLab-RouteTable"
            },
            "vpc_id": "vpc-024d408a5c6043622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyLab-InternetGateway",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08843dd17556de9",
            "route_table_id": "rtb-0c5565035243e048a",
            "subnet_id": "subnet-06ec47dcf609985eb"
          },
          "dependencies": [
            "aws_internet_gateway.MyLab-InternetGateway",
            "aws_route_table.MyLab-RouteTable",
            "aws_subnet.MyLab-subnet1",
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLab-Sec-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491486551761:security-group/sg-0e927175d3714e07d",
            "description": "Allow inbound and outbound traffic to MyLab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e927175d3714e07d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyLab Security Group",
            "name_prefix": "",
            "owner_id": "491486551761",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-024d408a5c6043622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyLab-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491486551761:subnet/subnet-06ec47dcf609985eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-06ec47dcf609985eb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491486551761",
            "tags": {
              "Name": "MyLab-subnet1"
            },
            "tags_all": {
              "Name": "MyLab-subnet1"
            },
            "vpc_id": "vpc-024d408a5c6043622"
          },
          "dependencies": [
            "aws_vpc.MyLab-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:491486551761:vpc/vpc-024d408a5c6043622",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-021cad5a5c0f64f16",
            "default_route_table_id": "rtb-0dee97f06cdf49a97",
            "default_security_group_id": "sg-0d08e7fb5ddcbc74e",
            "dhcp_options_id": "dopt-64d04b0f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-024d408a5c6043622",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dee97f06cdf49a97",
            "owner_id": "491486551761",
            "tags": {
              "Name": "MyLab-vpc"
            },
            "tags_all": {
              "Name": "MyLab-vpc"
            }
          }
        }
      ]
    }
  ]
}